# termul

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.example.json  .claude_settings.json  .coderabbit.yaml  .cora.yaml  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .ignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  E2E_VERIFICATION_REPORT.md  LICENSE  README.md  VERIFICATION_CHECKLIST.md  acceptance-auditor-findings.md  biome.json  blind-hunter-findings.md  bun.lockb  capture_color_block.py  check_block2.py  check_bytes_newproj.py  check_lines_630_650.py  cliff.toml  count_tabs.py  edge-case-findings.json  electron.vite.config.ts  eslint.config.js  examine_newproj_close.py  find_color_block.py  fix_color_closure.py  get_indents.py  index.html  insert_color_correct.py  inspect_color_block.py  inspect_indent.py  inspect_newproj_bytes.py  (+24 more)
.codex/: config.toml  hooks.json
.codex/hooks/: stop-hook.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: code-review.yml  codeql.yml  cora-review.yml  dependency-review.yml  deploy-landing.yml  fork-monitor.yml  github-actions-security.yml  pr-validation.yml  publish-aur.yml  publish-homebrew.yml  release-tauri.yml  release.yml  scorecard.yml  secret-scan.yml  star-history.yml
.husky/: pre-commit
Auto Run Docs/: xterm-6.1-adoption-gate.md  xterm-6.1-manual-validation-protocol.md
Casks/: termul.rb
dist-web/: web-index.html
dist-web/assets/: CodeEditor-Bc8qMg3E.js  CodeEditor-DV50GZVN.js  MarkdownEditor-B43hQw98.css  MarkdownEditor-DLhqQHEw.js  MarkdownEditor-DfCI4IJR.js  TocPanel-B7BUf9YC.js  TocPanel-DbDuAzzl.js  addon-fit-BbBZvMp5.js  arc-BqpYa9Bq.js  arc-DTvJb8sO.js  architectureDiagram-3BPJPVTR-DtfPJADc.js  architectureDiagram-3BPJPVTR-lovqH038.js  blockDiagram-GPEHLZMM-BJEp82FO.js  blockDiagram-GPEHLZMM-BlAq14Hd.js  c-BCbPk4bV.js  c-CurKOQmL.js  c4Diagram-AAUBKEIU-BsPLTMzE.js  c4Diagram-AAUBKEIU-CZuBOUEV.js  channel-BG7UnGFH.js  channel-CIhQBsuE.js  chunk-2J33WTMH-BVyIA9ZI.js  chunk-2J33WTMH-BrO5phE9.js  chunk-4BX2VUAB-BV2UdV63.js  chunk-4BX2VUAB-DPrXva8N.js  chunk-55IACEB6-CbTLUuBN.js  chunk-55IACEB6-DsuKwH7s.js  chunk-727SXJPM-DiKkvy5F.js  chunk-727SXJPM-iZlQSwGl.js  chunk-AQP2D5EJ-BKN0qxhd.js  chunk-AQP2D5EJ-BjORR0Ue.js  chunk-FMBD7UC4-CHCnN5iJ.js  chunk-FMBD7UC4-CWBKlBs_.js  chunk-ND2GUHAM-9LZfQm5s.js  chunk-ND2GUHAM-sGxAC4ZZ.js  chunk-QZHKN3VN-B69jsrF4.js  chunk-QZHKN3VN-gH-3pY0w.js  classDiagram-4FO5ZUOK-3sknPDsC.js  classDiagram-v2-Q7XG4LA2-BftnircF.js  cose-bilkent-S5V4N54A-2gfAMfP-.js  cose-bilkent-S5V4N54A-BpNbSH0Q.js  (+162 more)
docs/: adr-terminal-pty-daemon.md  api-contracts.md  architecture.md  auto-update-release-verification.md  component-inventory.md  contribution-guide.md  deployment-guide.md  development-guide.md  index.md  project-context.md  project-overview.md  project-scan-analysis.json  project-scan-report.json  source-tree-analysis.md  terminal-pty-daemon-implementation-plan.md  terminal-pty-daemon-proposal.md  terminal-pty-daemon-protocol.md
docs/adr/: 0001-ripgrep-sidecar-tauri.md  001-architectural-debate-preserving-terminal-state.md  001-preserve-terminal-state-across-route-navigation.md
e2e/: termul-web-terminal.spec.ts
landing/: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  react-ssg.config.ts  tsconfig.app.json  vite.config.ts  wrangler.toml
landing/docs/: privacy.md
landing/functions/: tsconfig.json
landing/migrations/: 0001_testimonials.sql
landing/public/: robots.txt  sitemap.xml
landing/scripts/: _headers.yaml  sync-contributors.ts  write-headers.test.ts  write-headers.ts
landing/src/: App.tsx  index.css  main.tsx  routes.tsx
landing/tests/: contributors.test.ts  testimonials-api.test.ts  testimonials-route.test.ts
plans/: ux-recommendation-spec.md
resources/ai-templates/: aider.json  claude-code.json  cursor.json
scratch/: check_git_status.py  check_proxy.py  check_refresh_status.py  test_ws.py
scripts/: align-version.ts  benchmark-terminal-performance.ts  benchmark-xterm6-comparison.ts  check-xterm-adoption-gate.mjs  fetch-rg.mjs  install.sh  sync-acp-icons.mjs
scripts/tests/: helpers.bash  install.bats  smoke.bats
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.prod.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: annotation-overlay.js
src-tauri/src/: acp_binary_install.rs  agent_registry.rs  browser_tab_manager.rs  commands.rs  lib.rs  logging.rs  main.rs  migrations.rs  path_validation.rs  remote_server.rs  secure_storage.rs  shell_paths.rs  tunnel.rs  ws_server.rs
src-tauri/src/acp/: client.rs  commands.rs  config.rs  events.rs  manager.rs  mod.rs  session.rs  terminal.rs  tests.rs
src-tauri/src/pty/: da_filter.rs  env_refresh.rs  manager.rs  mod.rs  windows.rs
src-tauri/src/remote/: auth.rs  mod.rs  registry.rs  server.rs  ws.rs
src-tauri/src/remote/static/: index.html
src-tauri/src/remote/static/fonts/: urbanist.css
src-tauri/src/skills/: commands.rs  mod.rs
src-tauri/src/ssh/: config_parser.rs  connection.rs  credential_store.rs  mod.rs  port_forward.rs  profile_manager.rs  sftp.rs
src-tauri/src/trackers/: cwd_tracker.rs  exit_code_tracker.rs  git_tracker.rs  mod.rs
src-tauri/src/worktree/: mod.rs
src-tauri/src/ws_server/: commands.rs  handler.rs  html.rs  index.html  mod.rs  server.rs  utils.rs
src/main/: index.test.ts  index.ts  menu.ts
src/preload/: index.d.ts  index.test.ts  index.ts
src/renderer/: App.test.tsx  App.tsx  TauriApp.test.tsx  TauriApp.tsx  WebApp.test.tsx  WebApp.tsx  app-router.tsx  index.css  index.html  main.tsx  tauri-main.tsx  vite-env.d.ts  vitest.d.ts  web-file-tree.tsx  web-main.tsx  web-panels.tsx  web-terminal-workspace-parts.tsx  web-terminal-workspace.tsx
src/shared/: window-api.d.ts
test-results/: .last-run.json
tests/: vitest.config.ts
tests/github-actions/: diff-parser.test.ts  (+1 more)
vitest-mocks/: electron.ts  micromatch.ts
(+787 files in other folders)
