[package]
name = "termul-manager"
version = "0.3.0-4"
description = "Project-aware terminal that treats workspaces as first-class citizens"
authors = ["gnoviawan", "mannnrachman (Tauri port)"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "termul_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-mcp-bridge = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

# PTY and async runtime
portable-pty = "0.9"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"

# Regex and parsing
regex = "1"
lazy_static = "1.4"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = { version = "0.11", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
winapi = { version = "0.3", features = [
    "winbase",
    "winuser",
    "consoleapi",
    "handleapi",
    "processenv",
    "processthreadsapi",
    "synchapi",
    "minwindef",
    "winnt",
    "namedpipeapi",
    "wincontypes",
    "ntdef",
] }
