[package]
name = "termul-manager"
version = "0.4.3"
description = "Project-aware terminal that treats workspaces as first-class citizens"
authors = ["gnoviawan", "mannnrachman (Tauri port)"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "termul_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# unstable is required for child/multi-webview support used by BrowserTabManager
tauri = { version = "2.0", features = ["unstable", "devtools"] }
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-mcp-bridge = "0.9"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

# ADR-004.6: opt-in, read-only fetch of the ACP Registry (identity/discovery
# only). rustls-tls matches the backend already pulled in by the updater plugin.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "http2"] }

# PTY and async runtime
portable-pty = "0.9"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"

# ACP (Agent Client Protocol) — ADR-003 P0
# NOTE: agent-client-protocol 0.12 ships its own `AcpAgent`/`Stdio` transport
# (built on async-process), so the separate `agent-client-protocol-tokio` crate
# is NOT used — it depends on acp 0.11, which would pull a second, incompatible
# copy of the protocol crate into the tree. See Spec Change Log in
# spec-adr-003-p0-rust-acp-core.md.
agent-client-protocol = "0.12"

# Regex and parsing
regex = "1"
lazy_static = "1.4"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# SSH
# Keep ssh2 on system OpenSSL for now. Enabling ssh2/vendored-openssl forces a
# local OpenSSL source build that fails in common Windows/MSYS dev environments
# without a full Perl module setup; see README SSH development notes.
ssh2 = "0.9"

# Secure storage (OS keychain for secure credential storage).
# IMPORTANT: keyring selects its backend at COMPILE TIME via cargo features.
# Without an OS-backend feature it silently falls back to an in-memory mock
# store, so set_password "succeeds" but get_password always returns NoEntry
# (credentials never persist). Enable the native backend per OS below.
keyring = "3.6"

# Logging
log = "0.4"

# Remote terminal server (embedded Axum HTTP + WebSocket)
# Reuses the existing tokio + hyper 1.x + tower stack already in the dep tree.
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Cryptographic random generation for auth tokens
getrandom = "0.2"

# Structured logging for remote server
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = { version = "0.3", default-features = false }

[dev-dependencies]
tauri = { version = "2.0", features = ["test"] }
tower = { version = "0.5", features = ["util"] }

# --- OS keychain backends for `keyring` (see note on the keyring dep above) ---
# Windows Credential Manager
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", features = ["windows-native"] }

# macOS Keychain
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", features = ["apple-native"] }

# Linux Secret Service (persistent across reboots) with pure-Rust crypto so we
# don't require a system OpenSSL/Perl build toolchain.
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6", features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
winapi = { version = "0.3", features = [
    "jobapi2",
    "winbase",
    "winuser",
    "consoleapi",
    "handleapi",
    "processenv",
    "processthreadsapi",
    "synchapi",
    "minwindef",
    "winnt",
    "namedpipeapi",
    "wincontypes",
    "ntdef",
] }
